# test-meilleurecopro

./: README.md  index.html  pyproject.toml
code_review/original/: file.py
code_review/reworked/: file.py  test.py
meilleurecopro/: manage.py  truncate.csv
meilleurecopro/meilleurecopro/: asgi.py  settings.py  urls.py  wsgi.py
meilleurecopro/stats/: models.py  urls.py  views.py
meilleurecopro/stats/management/commands/: import-csv.py
meilleurecopro/stats/migrations/: 0001_initial.py  0002_alter_advertisement_condominium_fees.py  0003_alter_advertisement_bienici_id_and_more.py  0004_alter_advertisement_condominium_fees.py
